resources/03-demo-app/100-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-app
  namespace: demo-app
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: demo-app
  template:
    metadata:
      labels:
        deployment: demo-app
    spec:
      volumes:
        - name: configmap
          configMap:
            name: application-properties
            defaultMode: 420
      containers:
        - name: spring-app
          image: >-
            quay.io/ilago/tetris-4-k8s:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: configmap
              mountPath: /tmp/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
