resources/03-demo-app/300-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-app
  namespace: demo-app
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
spec:
  to:
    kind: Service
    name: demo-app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080-tcp
